@@ -320,12 +320,13 @@
 
 		/**
 		 * Prints out the mask.
-		 * @access public
 		 */
-		function main()
+		public function main()
 		{
-			header("Content-Type: text/html; charset=UTF-8");
-			echo $this->getAsString();
+			if (!P4A::singleton()->inAjaxCall()) {
+				header("Content-Type: text/html; charset=UTF-8");
+				echo $this->getAsString();
+			}
 		}
 
 		/**
